# mrs_uav_coppelia_simulation

./: README.md
coppelia_resources/: clock.py
mrs_uav_coppelia_api/: CMakeLists.txt  package.xml  plugins.xml
mrs_uav_coppelia_api/src/: api.cpp
mrs_uav_coppelia_simulation/: CMakeLists.txt  package.xml
mrs_uav_coppelia_simulation/coppelia_resources/: controller.py  world.ttt
mrs_uav_coppelia_simulation/tmux/: session.yml
mrs_uav_coppelia_simulation/tmux/config/: custom_config.yaml
ros_packages/mrs_uav_coppelia_api/: CMakeLists.txt  README.md  package.xml  plugins.xml
ros_packages/mrs_uav_coppelia_api/config/: hw_api_plugin.yaml
ros_packages/mrs_uav_coppelia_api/launch/: api.launch
ros_packages/mrs_uav_coppelia_api/src/: api.cpp
tmux/: rviz.rviz  session.yml
tmux/custom_configs/: custom_config.yaml  odometry.yaml  uav_manager.yaml  world.yaml
tmux/uav/: session.yml
tmux/uav/custom_configs/: active_estimators.yaml
