<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_coppelia_simulation</name>
  <version>1.0.0</version>
  <description>CoppeliaSim for the MRS UAV System</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrs_uav_coppelia_api</depend>

</package>
