<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_coppelia_api</name>
  <version>1.0.0</version>
  <description>CoppeliaSim HW API for MRS UAV System</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>mrs_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>geometry_msgs</depend>
  <depend>mrs_uav_hw_api</depend>

  <export>
    <mrs_uav_hw_api plugin="${prefix}/plugins.xml" />
  </export>

</package>
